<resources>
    <string name="app_name">C0778923_W2020_MAD3125_FP</string>
    <string name="name">Kritima Kukreja</string>
    <string name="student_id">C0778923</string>
    <string name="suffix">Suffix</string>

    <string-array name="suffixArray">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>Miss.</item>
        <item>Dr.</item>
        <item>Sir</item>
        <item>Lord</item>
    </string-array>

    <string name="title_activity_show_bill">ShowBillActivity</string>
    <string name="title_hydro">Hydro</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_internet">Internet</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="city">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="add">Add</string>
    <string name="last_name">Last Name</string>
    <string name="about_us">ABOUT US</string>

    <string-array name="billArray">
        <item>Hydro</item>
        <item>Internet</item>
        <item>Mobile</item>
    </string-array>

</resources>
