<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lambton.c0778923_w2020_mad3125_fp.ui.hydro.HydroFragment"
        android:label="@string/title_hydro"
        tools:layout="@layout/fragment_hydro" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lambton.c0778923_w2020_mad3125_fp.ui.mobile.MobileFragment"
        android:label="@string/title_mobile"
        tools:layout="@layout/fragment_mobile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lambton.c0778923_w2020_mad3125_fp.ui.internet.InternetFragment"
        android:label="@string/title_internet"
        tools:layout="@layout/fragment_internet" />
</navigation>
